# binary-serializer-deserializer

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  ProjectOptions.cmake  RequireStdExpected.cmake  Sanitizers.cmake
examples/: CMakeLists.txt  smoke.cpp
include/bsd/: bsd.hpp  concepts.hpp  config.hpp  error.hpp  expected.hpp  fwd.hpp  serialize_expected.hpp  version.hpp.in
src/: error_category.cpp
tests/: CMakeLists.txt  error_category_test.cpp  try_macro_test.cpp
